Fix: Side pane footer overlay when side pane content is too tall.

--- a/colander/static/scss/graph.scss
+++ b/colander/static/scss/graph.scss
@@ -127,6 +127,11 @@
 
     .vue-container
     {
+      .body
+      {
+        max-height: calc(100% - 3rem);
+        overflow: hidden auto;
+      }
        .footer
       {
         position: absolute;
